monticore-grammar/src/test/resources/de/monticore/javalight/cocos/valid/A0802.java
/* (c) https://github.com/MontiCore/monticore */
abstract public a() {}
