monticore-grammar/src/test/resources/de/monticore/javalight/cocos/invalid/A0803/A0803a.java
/* (c) https://github.com/MontiCore/monticore */
public native void method(){}
